# snapstream-reader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
html/: current-time-series.html  default-time-series.csv  default.json  default_time.json  graph.js  graph1.json  graph2.json  hot-list.html  index.html  long-time-series.csv  multiple_time.json  multiple_time_varied.json  program-selector.js  single_time.json  style.css  time-series-style.css  time-series.css  time-series.html  time-series.js  visualize.html
jobs/: 2016_presidential_candidates.js  check_snap.py  get_snap_branch.sh  hot_list.js  republican_candidates.js  top_weekly_countries.js
legacy/: README  eg01china.c  eg02trade.c  eg03search.c  eg04nearsearch.c  full_output.txt  index.html  run_on_dates.py  run_on_dates_countries.py
legacy/Data/: 2012-10-23-Combined.txt  2012-11-03-Combined.txt  2012-11-24-Combined.txt  2012-12-14-Combined.txt  2013-01-01-Combined.txt  2013-01-13-Combined.txt  2013-05-21-Combined.txt  test.cpp
legacy/cgi-bin/: nearsearch  nearsearch.c  search  search.c  search.cpp
legacy/project/: list_of_countries.txt  short_list.txt
resources/: dictionary.csv
src/: CMakeLists.txt  CoOccurrenceMatrix.cpp  CoOccurrenceMatrix.h  Excerpt.cpp  Excerpt.h  Expression.cpp  Expression.h  Program.cpp  Program.h  StringHasher.cpp  StringHasher.h  distance.cpp  distance.h  hot_list.cpp  multiple_search.cpp  near_search.cpp  pair_search.cpp  parser.cpp  process_file.cpp  simple_search.cpp  snap.cpp  snap.h  snap_date.cpp  snap_io.cpp  snap_web.cpp  snap_word.cpp
src/boost/algorithm/: string.hpp
test/: .#distance_unittest.cpp  CMakeLists.txt  cooccurrencematrix_unittest.cpp  date_unittest.cpp  distance_unittest.cpp  evaluator_unittest.cpp  excerpt_unittest.cpp  expression_unittest.cpp  io_unittest.cpp  main.cpp  parse_unittest.cpp  snap_unittest.cpp  stringhasher_unittest.cpp  web_unittest.cpp  word_unittest.cpp
utilities/: output_to_csv.py
