project(snapstream-reader)
cmake_minimum_required(VERSION 2.8)
IF(UNIX)
  set(CMAKE_CXX_FLAGS "-std=c++11")
ENDIF(UNIX)
IF(APPLE)
  set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
ENDIF(APPLE)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/cgi-bin)
add_subdirectory(src)

enable_testing()
add_subdirectory(test)
add_test(snapTest test/bin/unittest)

file(COPY ${CMAKE_SOURCE_DIR}/html/index.html DESTINATION ${CMAKE_BINARY_DIR})
