project(snapstream-reader)
cmake_minimum_required(VERSION 2.8)
IF(UNIX)
  set(CMAKE_CXX_FLAGS "-std=c++11")
ENDIF(UNIX)
IF(APPLE)
  set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
ENDIF(APPLE)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/cgi-bin)
add_subdirectory(src)

enable_testing()
add_subdirectory(test)
add_test(SnapTest test/bin/snap_unittest)
add_test(WordTest test/bin/word_unittest)
add_test(WebTest test/bin/web_unittest)
add_test(IoTest test/bin/io_unittest)
add_test(ExcerptTest test/bin/excerpt_unittest)
add_test(DateTest test/bin/date_unittest)
add_test(ExpressionTest test/bin/expression_unittest)
add_test(EvaluatorTest test/bin/evaluator_unittest)
add_test(DistanceTest test/bin/distance_unittest)
add_test(StringHasherTest test/bin/stringhasher_unittest)
add_test(CoOccurrenceMatrixTest test/bin/cooccurrencematrix_unittest)

file(COPY ${CMAKE_SOURCE_DIR}/html/index.html DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/style.css DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/program-selector.js DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/visualize.html DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/d3.tip.js DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/d3.v3.min.js DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/graph.js DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/multiple_time_varied.json DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/time-series.css DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/time-series.html DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/time-series.js DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/default-time-series.csv DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/long-time-series.csv DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/html/current-time-series.html DESTINATION ${CMAKE_BINARY_DIR})
file(COPY ${CMAKE_SOURCE_DIR}/resources/dictionary.csv DESTINATION ${CMAKE_BINARY_DIR}/cgi-bin)
file(COPY ${CMAKE_SOURCE_DIR}/html/hot-list.html DESTINATION ${CMAKE_BINARY_DIR})
