include_directories(${CMAKE_SOURCE_DIR}/src)
add_library(snap snap.cpp)
add_library(Program Program.cpp)
add_library(Excerpt Excerpt.cpp)
add_executable(simple_search simple_search.cpp)
add_executable(parser parser.cpp)
target_link_libraries(snap Program)
target_link_libraries(Excerpt Program)
target_link_libraries(simple_search snap Program Excerpt)
target_link_libraries(parser snap Program)
