include_directories(${CMAKE_SOURCE_DIR}/src)
add_library(snap snap.cpp snap_io.cpp snap_date.cpp snap_web.cpp snap_word.cpp)
add_library(distance distance.cpp)
add_library(Program Program.cpp)
add_library(Excerpt Excerpt.cpp)
add_library(Expression Expression.cpp)
add_library(StringHasher StringHasher.cpp)
add_executable(simple_search simple_search.cpp)
add_executable(near_search near_search.cpp)
add_executable(multiple_search multiple_search.cpp)
add_executable(pair_search pair_search.cpp)
add_executable(hot_list hot_list.cpp)
add_executable(process_file process_file.cpp)
target_link_libraries(snap Program Expression)
target_link_libraries(Excerpt Program)
target_link_libraries(simple_search snap Program Excerpt)
target_link_libraries(near_search snap Program Excerpt)
target_link_libraries(multiple_search snap Program Excerpt)
target_link_libraries(pair_search snap Program distance)
target_link_libraries(hot_list snap Program)
target_link_libraries(process_file snap)
