# put test files in different directories
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/bin)

include_directories(${CMAKE_SOURCE_DIR}/src)
include_directories(${CMAKE_SOURCE_DIR}/test)
link_directories(${CMAKE_BINARY_DIR}/lib)
add_library(gtest gtest-all.cc)
add_library(gmock gmock-gtest-all.cc)
add_executable(snap_unittest snap_unittest.cpp)
add_executable(web_unittest web_unittest.cpp)
add_executable(io_unittest io_unittest.cpp)
add_executable(date_unittest date_unittest.cpp)
add_executable(excerpt_unittest excerpt_unittest.cpp)
add_executable(expression_unittest expression_unittest.cpp)
target_link_libraries(snap_unittest pthread gtest gmock snap Program)
target_link_libraries(web_unittest pthread gtest gmock snap Program)
target_link_libraries(io_unittest pthread gtest gmock snap Program)
target_link_libraries(date_unittest pthread gtest gmock snap Program)
target_link_libraries(excerpt_unittest pthread gtest gmock snap Program Excerpt)
target_link_libraries(expression_unittest pthread gtest gmock snap Expression)
